src/components/Home/Home.module.css
.wrapper {
  background: white;
  color: black;
  width: 100%;
  border-radius: 30px 30px 0px 0px;
  padding: 2rem;
}

.img {
  max-width: 100%;
  height: auto;
  border-radius: 5px;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.center {
  text-align: center;
}

.para {
  color: var(--darkGrey);
}

.margin {
  margin: 0px;
}

.via {
  color: var(--purple);
}

.buttonContainer {
  margin-left: auto;
  margin-right: auto;
}

/* Desktop */
@media only screen and (min-width: 768px) {
  .img {
    max-width: 80%;
  }
}

/* Desktop */
@media only screen and (min-width: 1024px) {
  .wrapper {
    border-radius: 0px;
  }

  .padding {
    padding: 1rem;
  }

  .shadow {
    background-color: white;
    box-shadow: 2px 2px 20px var(--darkGrey);
    border-radius: 20px;
  }

  .img {
    max-width: 40%;
    max-height: auto;
    margin: 3rem;
  }

  .card {
    margin-left: 5rem;
    margin-right: 5rem;
    position: relative;
    bottom: 5rem;
  }

  .titleContainer {
    display: flex;
    align-items: center;
    margin-left: 5rem;
  }

  .buttonsContainer {
    display: flex;
  }

  .buttonContainer {
    margin-top: 1rem;
    margin-left: auto;
    margin-right: auto;
    width: 20%;
    text-align: center;
  }

  .customBorder {
    padding: 2px;
    background-image: url("/images/customBorder.svg");
    background-repeat: repeat-x;
  }
}

